interaction for adding tags improved

--- a/typo3conf/ext/wpj/Resources/Private/Templates/article/addMedia.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/article/addMedia.html
@@ -22,6 +22,20 @@
 				<f:form.checkbox name="closeWindow" checked="true" value="true"/>Fenster schliessen
 			</f:form>
 			<div id="waitForUpload"> <f:image src="typo3conf/ext/wpj/Resources/Public/img/spinner.gif" alt="warten..."/> Bitte warten, die Datei wird auf den Server geladen. Das kann einige Minuten dauern...</div>
+			
+			<p>Du kannst die folgenden Medien hochladen:</p>
+			<ul>
+				<li>Bilder als JPGs (mit höchstens 3MB)</li>
+				<li>Filme und Animationen als MP4, benutze dazu einen Converter, z.B. <a href="http://www.mirovideoconverter.com">Miro</a></li>
+				<li>Hörspiele oder Sounds als MP3</li>
+				<li>Zeitungen oder ähnliche Druckdokumente als PDF</li>
+			</ul>	
+			<p>Achtung:</p>
+			<ul>				
+				<li>Präsentationen (Powerpoint o.ä.) bitte als PDF exportieren, damit sie von jedem geöffnet werden können. <br/>Noch besser: als Einzelbilder einfügen</li>
+				<li>keine Worddokumente als doc-Dateien hochladen - nicht jeder kann sie öffnen</li>
+			</ul>
+			
 		</div>
 			
 		<hr/>
