added tool to manage article versions

--- a/typo3conf/ext/wpj/Resources/Private/Partials/navigation_admin.html
+++ b/typo3conf/ext/wpj/Resources/Private/Partials/navigation_admin.html
@@ -34,7 +34,7 @@
 						<ul>
 						    <li><f:link.action controller="authorWizard" action="step1">Neue Gruppen anlegen</f:link.action></li>
 						    <li><f:link.action controller="Rallye" extensionName="wpjr" pageUid="10">Rallye-Editor</f:link.action></li>
-						    <li><f:link.action controller="articleAdmin" action="backupWizard">Alte Artikel-Versionen aufr&auml;umen</f:link.action></li>
+						    <li><f:link.action controller="articleAdmin" action="cleanupVersionsWizard">Alte Artikel-Versionen aufr&auml;umen</f:link.action></li>
 						</ul>
 					</div>
 				</div>
