--- a/typo3conf/ext/wpj/Resources/Private/Templates/article/exhibition.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/article/exhibition.html
@@ -41,7 +41,7 @@
 											<p><f:format.crop maxCharacters="96">{article.body -> f:format.stripTags()}</f:format.crop></p>
 											</div>
 											<div class="author meta clearfix bt">
-												<h4>Autoren/Gruppe</h4>
+												<h4><span>Autoren/Gruppe</span></h4>
 												<ul class="authorlist">
 													<li><f:render partial="authorWithImage" arguments="{author: article.author}"/></li>
 												</ul>
