--- a/typo3conf/ext/wpj/Resources/Private/Templates/article/show.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/article/show.html
@@ -149,9 +149,9 @@
 	
 	<div class="metabox">
 		<h4>Autoren</h4>
-		<div id="authorslist" class="tags clearfix">
-			<f:image src="typo3conf/ext/wpj/Resources/Public/img/spinner.gif" alt="warten..."/>
-		</div>
+			<div id="authorslist">
+				<f:image src="typo3conf/ext/wpj/Resources/Public/img/spinner.gif" alt="warten..."/>
+			</div>
 	</div>
 	
 <wpj:ifAdminLevel minLevel="20">				
