--- a/typo3conf/ext/wpj/Resources/Public/less/style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/style.less
@@ -771,43 +771,6 @@ ul.tagit input[type="text"] {
 	}
 }
 
-/*
-.wpj-button, .wpj-button:visited {
-background: #222 url(/images/alert-overlay.png) repeat-x; 
-display: inline-block; 
-padding: 5px 10px 6px; 
-color: #fff; 
-text-decoration: none;
--moz-border-radius: 5px; 
--webkit-border-radius: 5px;
--moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
--webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-border-bottom: 1px solid rgba(0,0,0,0.25);
-position: relative;
-cursor: pointer;
-}
-
-.wpj-button:hover							{ background-color: #111; color: #fff; }
-.wpj-button:active							{ top: 1px; }
-.small.wpj-button, .small.wpj-button:visited 			{ font-size: 11px; padding: ; }
-.wpj-button, .wpj-button:visited,
-.medium.wpj-button, .medium.wpj-button:visited 		{ font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
-.large.wpj-button, .large.wpj-button:visited 			{ font-size: 14px; padding: 8px 14px 9px; }
-
-.green.wpj-button, .green.wpj-button:visited		{ background-color: #91bd09; }
-.green.wpj-button:hover						{ background-color: #749a02; }
-.blue.wpj-button, .blue.wpj-button:visited		{ background-color: #2daebf; }
-.blue.wpj-button:hover							{ background-color: #007d9a; }
-.red.wpj-button, .red.wpj-button:visited			{ background-color: #e33100; }
-.red.wpj-button:hover							{ background-color: #872300; }
-.magenta.wpj-button, .magenta.wpj-button:visited		{ background-color: #a9014b; }
-.magenta.wpj-button:hover							{ background-color: #630030; }
-.orange.wpj-button, .orange.wpj-button:visited		{ background-color: #ff5c00; }
-.orange.wpj-button:hover							{ background-color: #d45500; }
-.yellow.wpj-button, .yellow.wpj-button:visited		{ background-color: #ffb515; }
-.yellow.wpj-button:hover							{ background-color: #fc9200; }
-*/
 table { margin: 0 0 1.2em 0; width: 960px;}
 table th, table td { padding: 5px; line-height: 140%; text-align: left; vertical-align: top; font-size: .74em; }
 table th { border-top: 1px #ADADAD solid; border-bottom: 1px solid @wpj_admin_line_grey; background: @wpj_admin_grey;}
@@ -820,6 +783,10 @@ table {
 	tr {
 		td { border-bottom: 1px solid #ADADAD; }
 	}
+}
+
+.mute {
+	color: @grey;
 }
 
 
