--- a/typo3conf/ext/wpj/Resources/Private/Templates/articleAdmin/index.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/articleAdmin/index.html
@@ -33,7 +33,7 @@
 				 configuration="{itemsPerPage: 50, insertAbove: 0, insertBelow: 1}">
 			<f:for each="{paginatedArticles}" as="article">
 			<tr>
-				<td>{article.title} <br/><span class="small">ID: {article.uid}</span></td>
+				<td>{article.title} <br/><span class="mute">ID: {article.uid}</span></td>
 				<td>{article.articletype.name}</td>
 				<td>
 					<f:for each="{article.authors}" as="author">
