--- a/typo3conf/ext/wpj/Resources/Private/Layouts/default.html
+++ b/typo3conf/ext/wpj/Resources/Private/Layouts/default.html
@@ -2,15 +2,16 @@
 <wpj:includeFile path="EXT:wpj/Resources/Public/stylesheets/jquery.fancybox-1.3.4.css" />
 <div id="container"<f:format.html parseFuncTSPath="">{wrapperCssClass}</f:format.html>>
 	<f:render partial="navigation_admin" />
-	<header class="grid">
-		<h2 class="hideme">Navigation</h2>
-		<f:render partial="navigation_main" />
-		<hr class="hideme" />
-		<f:render partial="navigation_wiki" arguments="{demand: demand}"/>
-		<hr class="hideme" />
-		<div id="branding"></div>
-	</header>
-
+	<div class="grid">
+		<header>
+			<h2 class="hideme">Navigation</h2>
+			<f:render partial="navigation_main" />
+			<hr class="hideme" />
+			<f:render partial="navigation_wiki" arguments="{demand: demand}"/>
+			<hr class="hideme" />
+			<div id="branding"></div>
+		</header>
+	</div>
 	<f:render section="main" />
 
 	<f:render partial="footer" />
