--- a/typo3conf/ext/wpj/Resources/Private/Layouts/default.html
+++ b/typo3conf/ext/wpj/Resources/Private/Layouts/default.html
@@ -2,7 +2,7 @@
 <wpj:includeFile path="EXT:wpj/Resources/Public/stylesheets/jquery.fancybox-1.3.4.css" />
 <div id="container"<f:format.html parseFuncTSPath="">{wrapperCssClass}</f:format.html>>
 	<f:render partial="navigation_admin" />
-	<div class="grid">
+	<div class="grid full">
 		<header>
 			<h2 class="hideme">Navigation</h2>
 			<f:render partial="navigation_main" />
