--- a/typo3conf/ext/wpj/Resources/Private/Templates/dashboard/index_loggedIn.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/dashboard/index_loggedIn.html
@@ -8,7 +8,7 @@
 		<hr class="hideme" />
 	</div>
 
-	<div id="notifications">
+	<div id="notifications" class="grid">
 		<f:flashMessages />
 	</div>	
 
