--- a/typo3conf/ext/wpj/Resources/Private/Templates/author/index.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/author/index.html
@@ -3,76 +3,78 @@
 This Template is responsible for creating a table of domain objects.
 
 <f:section name="main">
-<h2>
-	Liste der Autoren
-	{searchdesc}
-</h2>
-
-
-
-<f:form method="post" controller="author" action="search" name="search">
-	<label for="authorSearchField" class="hideme">Suche</label> 
-	<f:form.textfield id="authorSearchField" property="search"/> 
-	<f:form.submit value="suchen" />
-</f:form>
-
-<f:flashMessages />
-
-<table>
-	<tr>
-		<th>Login</th>
-		<th>Schule</th>
-		<th>Gruppenname</th>
-		<th>Teilnehmer</th>
-		<th>Email</th>
-		<th>G&uuml;ltigkeit</th>
-		<th>zuletzt online</th>
+<div id="main" role="main" class="grid">
+	<h2>
+		Liste der Autoren
+		{searchdesc}
+	</h2>
+	
+	
+	
+	<f:form method="post" controller="author" action="search" name="search">
+		<label for="authorSearchField" class="hideme">Suche</label> 
+		<f:form.textfield id="authorSearchField" property="search"/> 
+		<f:form.submit value="suchen" />
+	</f:form>
+	
+	<f:flashMessages />
+	
+	<table>
+		<tr>
+			<th>Login</th>
+			<th>Schule</th>
+			<th>Gruppenname</th>
+			<th>Teilnehmer</th>
+			<th>Email</th>
+			<th>G&uuml;ltigkeit</th>
+			<th>zuletzt online</th>
+			
+			<th>Aktiv?</th>
+			<th> </th>
+			<th> </th>
+			<th> </th>
+		</tr>
 		
-		<th>Aktiv?</th>
-		<th> </th>
-		<th> </th>
-		<th> </th>
-	</tr>
-	
-	
-<f:widget.paginate objects="{authors}" as="paginatedAuthors"
-		 configuration="{itemsPerPage: 30, insertAbove: 1, insertBelow: 1}">
-		<f:for each="{paginatedAuthors}" as="author" iteration="objIterator">
-			<tr>
-				<td>{author.username}</td>
-				<td>{author.school.name} {author.school.schooltype.name}</td>
-				<td>{author.name}</td>
-				<td>{author.address}</td>
-				<td>{author.email}</td>
-				<td>
+		
+	<f:widget.paginate objects="{authors}" as="paginatedAuthors"
+			 configuration="{itemsPerPage: 30, insertAbove: 1, insertBelow: 1}">
+			<f:for each="{paginatedAuthors}" as="author" iteration="objIterator">
+				<tr>
+					<td>{author.username}</td>
+					<td>{author.school.name} {author.school.schooltype.name}</td>
+					<td>{author.name}</td>
+					<td>{author.address}</td>
+					<td>{author.email}</td>
+					<td>
+						
+						<f:format.date format="d.m.Y - ">{author.starttime}</f:format.date> 
+						<f:format.date format="d.m.Y">{author.endtime}</f:format.date>
+						<f:if condition="{author.loginIsExpired}"> X</f:if>
+					</td>
+					<td><f:format.date format="d.m.Y \u\m H:i">{author.lastLogin}</f:format.date></td>
 					
-					<f:format.date format="d.m.Y - ">{author.starttime}</f:format.date> 
-					<f:format.date format="d.m.Y">{author.endtime}</f:format.date>
-					<f:if condition="{author.loginIsExpired}"> X</f:if>
-				</td>
-				<td><f:format.date format="d.m.Y \u\m H:i">{author.lastLogin}</f:format.date></td>
-				
-				<td>
-				<f:if condition="{author.disabled}">jetzt 
-					<f:then>
-						<f:link.action action="disable" arguments="{author : author}">aktivieren</f:link.action>
-					</f:then>	
-					<f:else>
-						<f:link.action action="disable" arguments="{author : author}">sperren</f:link.action>
-					</f:else>
-				</f:if>
-				</td>
-				<td><f:link.action class="wpj-button" action="edit" arguments="{author : author}">Bearbeiten</f:link.action></td>
-				<td><f:link.action class="wpj-button" action="updatePassword" arguments="{author : author}" onclick="return confirm('Wirklich ein neues Passwort erstellen und das alte verwerfen?');">Passwort&nbsp;neu&nbsp;generieren</f:link.action></td>
-				<td><f:link.action class="wpj-button" action="delete" arguments="{author : author}" onclick="return confirm('Wirklich entfernen?');">L&ouml;schen</f:link.action></td>
-			</tr>
-		</f:for>
-		
-</table>
-<div class="pagination">
-</f:widget.paginate>
+					<td>
+					<f:if condition="{author.disabled}">jetzt 
+						<f:then>
+							<f:link.action action="disable" arguments="{author : author}">aktivieren</f:link.action>
+						</f:then>	
+						<f:else>
+							<f:link.action action="disable" arguments="{author : author}">sperren</f:link.action>
+						</f:else>
+					</f:if>
+					</td>
+					<td><f:link.action class="wpj-button" action="edit" arguments="{author : author}">Bearbeiten</f:link.action></td>
+					<td><f:link.action class="wpj-button" action="updatePassword" arguments="{author : author}" onclick="return confirm('Wirklich ein neues Passwort erstellen und das alte verwerfen?');">Passwort&nbsp;neu&nbsp;generieren</f:link.action></td>
+					<td><f:link.action class="wpj-button" action="delete" arguments="{author : author}" onclick="return confirm('Wirklich entfernen?');">L&ouml;schen</f:link.action></td>
+				</tr>
+			</f:for>
+			
+	</table>
+	<div class="pagination">
+	</f:widget.paginate>
+	</div>
+	
+	<f:link.action class="wpj-button" action="new">Neuen Nutzer anlegen</f:link.action><br />
+	<f:link.action class="wpj-button" controller="authorWizard" action="step1">Assistent zum Anlegen von Schulgruppen-Logins</f:link.action>
 </div>
-
-<f:link.action class="wpj-button" action="new">Neuen Nutzer anlegen</f:link.action><br />
-<f:link.action class="wpj-button" controller="authorWizard" action="step1">Assistent zum Anlegen von Schulgruppen-Logins</f:link.action>
 </f:section>
