--- a/typo3conf/ext/wpj/Resources/Public/less/style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/style.less
@@ -315,6 +315,13 @@ h2 {
 	font-size: 1em;
 }
 
+#login-form {
+	h2 {
+		font-size: 1.2em;
+		text-transform: uppercase;
+	}
+}
+
 .welcome {
 	h1 { margin: .7em 0 .2em 0; color: @wpj_brown; }
 	p { font-size: .78em; margin-top: .2em; letter-spacing: 1px;}
@@ -511,6 +518,27 @@ h2 {
 		padding: 0;
 		margin: .5em 0;
 		font-family: DroidSerifItalic;
+	}
+}
+
+#login-form {
+	padding: 1.5em 1em 1em 1em;
+	background: #fff;
+	border: 1px solid #efece5;
+	p {
+		font-family: @fonts_serif;
+		line-height: 180%;
+		font-size: .88em;
+		color: @black;
+	}
+	form {
+		border-top:1px solid #efece5;
+		label {
+			color: @wpj_blue_dark;
+		}
+		.textfield {
+			padding: .3em;
+		}
 	}
 }
 
