improved article sidebar + global optimizations

--- a/typo3conf/ext/wpj/Resources/Private/Templates/article/index.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/article/index.html
@@ -8,9 +8,11 @@
 		<hr class="hideme" />
 	</div>
 	
-	<div id="notifications">
-		<f:flashMessages />
-	</div>	
+	<div class="grid">
+		<div id="notifications">
+			<f:flashMessages />
+		</div>	
+	</div>
 	
 	<div id="main" role="main" class="grid">
 		<h2 class="hideme">Inhalt: Artikelübersicht</h2>
