--- a/typo3conf/ext/wpj/Resources/Private/Templates/dashboard/index_loggedIn.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/dashboard/index_loggedIn.html
@@ -7,11 +7,11 @@
 		<f:render partial="navigation_wiki_tools" />
 		<hr class="hideme" />
 	</div>
-
-	<div id="notifications" class="grid">
-		<f:flashMessages />
-	</div>	
-
+	<div class="grid">
+		<div id="notifications">
+			<f:flashMessages />
+		</div>	
+	</div>
 	<div id="main" role="main" class="grid">
 
 		<div class="row">
