--- a/typo3conf/ext/wpj/Resources/Public/less/style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/style.less
@@ -556,15 +556,26 @@ aside {
 		margin-bottom: 2em;
 	}
 	p {
-		font-size: .82em;
+		font-size: .78em;
 		color: @wpj_grey;
 		margin: 0 0 .5em;
 	}
+	p.weighty {
+		color: @black;
+	}
+	.sub {
+		font-size: .72em;
+	}
 	ul {
 		margin-left: 0; padding-left: 0;
-		font-size: .82em;
 		list-style-type: none;
+		font-size: .78em;
 		color: @wpj_grey;
+	}
+	ul.checklist {
+		list-style-type: disc;
+		list-style-position:inside;
+		font-size: .72em;
 	}
 	h4 {
 		margin-top: 0;
@@ -580,7 +591,18 @@ aside {
 	}
 
 	h5 {
-		margin: 0;
+		margin: .8em 0 1em 0;
+		/*
+		background: #efece5;
+		padding: .5em;
+		*/
+		padding-top: .5em;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-size: .72em;
+	}
+	h5.mt {
+		margin-top: 2em;
 	}
 	.taglist {
 		margin: 0 0 1em 0;
@@ -596,6 +618,31 @@ aside {
 			}
 		}
 	}
+	#articletype {
+		margin-bottom: 1em;
+	}
+	select {
+		width: 14em;
+		font-size: 13px;
+		padding: .3em;
+	}
+	.mt {
+		border-top: 1px solid #ccc;
+		padding-top: .75em;
+		margin-top: 1em;
+	}
+}
+
+#tagList, #placeList, #refplaceList {
+	margin-top: .3em;
+	li { display: inline-block; font-size: .78em; background: #cfd7e6; color: #fff; .border-radius(2px); border: 1px solid @wpj_blue; margin: 0 .5em .5em 0; }
+	li a { display: inline-block; padding: .3em .7em; color: @wpj_blue_dark; text-decoration: none;}
+	li span a { padding-left: 0; }
+}
+
+#versionslist {
+	font-size: .82em;
+	li { margin-bottom: .5em; }
 }
 
 .authorlist, .metalist {
@@ -613,7 +660,7 @@ aside {
 }
 
 aside .authorlist {
-	font-size: .72em; 
+	font-size: .78em; 
 	.wpj-button {
 		display: block;
 		margin: 2em 0 2em 0;
@@ -983,7 +1030,7 @@ table {
   #gradient > .vertical-three-colors(#ffffff, #ffffff, 25%, darken(#ffffff, 10%)); // Don't use .gradientbar() here since it does a three-color gradient
   padding: 5px 14px 6px;
   text-shadow: 0 1px 1px rgba(255,255,255,.75);
-  color: #333;
+  color: @wpj_blue;
   font-size: 13px;
   line-height: normal;
   border: 1px solid #ccc;
@@ -991,9 +1038,11 @@ table {
   .border-radius(4px);
   @shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   .box-shadow(@shadow);
+	min-width: 12em;
+	text-align: center;
 
   &:hover {
-    background-position: 0 -15px;
+    background-position: 0 -5px; 
     color: #333;
     text-decoration: none;
   }
@@ -1040,6 +1089,10 @@ table {
     padding: 7px 9px 7px;
     font-size: 11px;
   }
+}
+
+a.wpj-button {
+	text-decoration: none;
 }
 
 //---------------------------------------------------------------- TWITTER BOOTSTRAP ELEMENTS -------------------------------
