added css class for article in show action

--- a/typo3conf/ext/wpj/Resources/Private/Templates/article/show.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/article/show.html
@@ -26,7 +26,7 @@
 		<h2 class="hideme">Inhalt: Artikel</h2>
 		<div class="row">
 			<div class="slot-0-1-2-3">
-				<article class="article" id="article">
+				<article class="article {article.articletypeCssClass}" id="article">
 					<!-- aloha editable blocks -->
 					<h3 class="alohaEditor" id="article_title">{article.title}</h3>
 					<div class="alohaEditor" id="article_body">
